[gd_scene load_steps=14 format=3 uid="uid://c0egin0l7hc2v"]

[ext_resource type="Script" uid="uid://b1dycgqretdd5" path="res://Scripts/Objects/Others/smooth_camera.gd" id="1_eudxl"]
[ext_resource type="Script" uid="uid://bpuwan8cjogfr" path="res://Scripts/label.gd" id="2_6oxvd"]
[ext_resource type="AudioStream" uid="uid://btqjqrhgbcva" path="res://Assets/Audio/SFX/sfxAch.wav" id="3_yj5kq"]
[ext_resource type="Texture2D" uid="uid://du54mdekovu47" path="res://Assets/Sprites/GUI/MobileButtons/Pause.png" id="6_4chum"]
[ext_resource type="Texture2D" uid="uid://cgmam0rrrv7f2" path="res://Assets/Sprites/GUI/MobileButtons/SwitchPlayer.png" id="7_mkhw6"]
[ext_resource type="Texture2D" uid="uid://g7bsrts3djrh" path="res://Assets/Sprites/GUI/MobileButtons/SpawnBouncy_onurB.png" id="8_b7i7j"]
[ext_resource type="Texture2D" uid="uid://f47t28vuhy2s" path="res://Assets/Sprites/GUI/MobileButtons/DeleteAllBouncy_onurBs.png" id="9_svihx"]
[ext_resource type="Texture2D" uid="uid://msgthpbd7oiy" path="res://Assets/Sprites/GUI/MobileButtons/Left.png" id="10_osi1y"]
[ext_resource type="Texture2D" uid="uid://ddvpegqeqvnwr" path="res://Assets/Sprites/GUI/MobileButtons/E.png" id="10_y6tnf"]
[ext_resource type="Texture2D" uid="uid://doek8bdmw4qhs" path="res://Assets/Sprites/GUI/MobileButtons/Right.png" id="11_1uv7s"]
[ext_resource type="Texture2D" uid="uid://b0lo4bxyommtu" path="res://Assets/Sprites/GUI/MobileButtons/Jump.png" id="11_osi1y"]
[ext_resource type="Texture2D" uid="uid://b386q33dhx135" path="res://Assets/Sprites/GUI/MobileButtons/Z.png" id="12_1uv7s"]
[ext_resource type="Script" uid="uid://ccrncq5kf2wgi" path="res://Scripts/GUI/heal_menu.gd" id="12_y6tnf"]

[node name="SmoothCamera" type="Camera2D" node_paths=PackedStringArray("spawnBouncy", "deleteBouncy")]
script = ExtResource("1_eudxl")
spawnBouncy = NodePath("CanvasLayer/MobileControls/SpawnBouncy")
deleteBouncy = NodePath("CanvasLayer/MobileControls/DeleteBouncy")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yj5kq")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = -1
anchor_left = 0.007032349
anchor_top = 0.3625
anchor_right = 0.06329114
anchor_bottom = 0.42
script = ExtResource("2_6oxvd")
metadata/_edit_use_anchors_ = true

[node name="Beans" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.018284107
anchor_top = 0.0325
anchor_right = 0.13783404
anchor_bottom = 0.09
text = "Beans: "
metadata/_edit_use_anchors_ = true

[node name="Achievement" type="RichTextLabel" parent="CanvasLayer"]
clip_contents = false
anchors_preset = -1
anchor_left = -0.1392405
anchor_right = -0.004219409
anchor_bottom = 0.08
bbcode_enabled = true
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="MobileControls" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.033755273
anchor_top = 0.74
anchor_right = 0.16877638
anchor_bottom = 0.9825
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Pause" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(648, -281)
texture_normal = ExtResource("6_4chum")
action = "Pause"
visibility_mode = 1

[node name="SwitchPlayer" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(512, -281)
texture_normal = ExtResource("7_mkhw6")
action = "SwitchPlayer"
visibility_mode = 1

[node name="SpawnBouncy" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
visible = false
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(656, -146)
texture_normal = ExtResource("8_b7i7j")
action = "SpawnBouncy_onurB"
visibility_mode = 1

[node name="DeleteBouncy" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
visible = false
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(656, -58)
texture_normal = ExtResource("9_svihx")
action = "DeleteAllBouncy_onurBs"
visibility_mode = 1

[node name="JumpButton" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(536, -32)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("11_osi1y")

[node name="InteractButton" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(515, 56)
texture_normal = ExtResource("12_1uv7s")
action = "Interact"

[node name="HealMenuButton" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(611, 56)
texture_normal = ExtResource("10_y6tnf")
action = "HealMenu"

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(12, 13)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("10_osi1y")
passby_press = true
action = "ControllerLeft"

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer/MobileControls"]
self_modulate = Color(1, 1, 1, 0.7647059)
position = Vector2(97.99998, 13)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("11_1uv7s")
passby_press = true
action = "ControllerRight"

[node name="SpeedrunTimer" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.4416315
anchor_top = 0.0375
anchor_right = 0.5668073
anchor_bottom = 0.095
text = "Timer: x:x:x"
metadata/_edit_use_anchors_ = true

[node name="HealMenu" type="Window" parent="."]
oversampling_override = 1.0
title = "Heal Menu"
initial_position = 1
size = Vector2i(286, 100)
visible = false
script = ExtResource("12_y6tnf")

[node name="Fency" type="Button" parent="HealMenu"]
offset_top = 32.0
offset_right = 87.0
offset_bottom = 79.0
text = "Fency"

[node name="Toasty" type="Button" parent="HealMenu"]
offset_left = 199.0
offset_top = 32.0
offset_right = 286.0
offset_bottom = 79.0
text = "Toasty"

[node name="PanLoduwka" type="Button" parent="HealMenu"]
offset_left = 89.0
offset_top = 32.0
offset_right = 197.0
offset_bottom = 79.0
text = "PanLoduwka"

[node name="Info" type="Label" parent="HealMenu"]
offset_top = 77.0
offset_right = 286.0
offset_bottom = 100.0
text = "-1 Bean -> +20 HP"

[node name="FencyHP" type="Label" parent="HealMenu"]
offset_top = 5.0
offset_right = 86.0
offset_bottom = 28.0
text = "100/100"

[node name="PanLoduwkaHP" type="Label" parent="HealMenu"]
offset_left = 96.0
offset_top = 5.0
offset_right = 182.0
offset_bottom = 28.0
text = "100/100"

[node name="ToastyHP" type="Label" parent="HealMenu"]
offset_left = 200.0
offset_top = 5.0
offset_right = 286.0
offset_bottom = 28.0
text = "100/100"

[connection signal="pressed" from="CanvasLayer/MobileControls/JumpButton" to="." method="_on_jump_button_pressed"]
[connection signal="released" from="CanvasLayer/MobileControls/JumpButton" to="." method="_on_jump_button_released"]
[connection signal="close_requested" from="HealMenu" to="HealMenu" method="_on_close_requested"]
[connection signal="pressed" from="HealMenu/Fency" to="HealMenu" method="_on_fency_pressed"]
[connection signal="pressed" from="HealMenu/Toasty" to="HealMenu" method="_on_toasty_pressed"]
[connection signal="pressed" from="HealMenu/PanLoduwka" to="HealMenu" method="_on_pan_loduwka_pressed"]
